--- a/Style.css
+++ b/Style.css
@@ -1,111 +1,126 @@
 body {
-background: rgb(255,255,255);
-background: -moz-linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(240,84,84,1) 100%);
-background: -webkit-linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(240,84,84,1) 100%);
-background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(240,84,84,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#f05454",GradientType=1);
+  background: rgb(255, 255, 255);
+  background: -moz-linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(240, 84, 84, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(240, 84, 84, 1) 100%
+  );
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(240, 84, 84, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#f05454",GradientType=1);
 }
-h1{
-    font: size 4em;
+h1 {
+  font: size 4em;
 }
-p{
-    font:size 2em;
+p {
+  font: size 2em;
 }
 .navbar {
-  height: 55px
+  height: 55px;
 }
 .upper {
-    color: #30475e;
-    display: inline-flex;
-    padding: 5%;
+  color: #30475e;
+  display: inline-flex;
 }
 .upper-text {
-    padding: 10%;
-    position: relative;
+  padding: 10%;
+  position: relative;
+  margin-top: 10%;
 }
 .main {
   text-align: center;
-  width:max-content;
+  width: max-content;
   font-family: "Sacramento", cursive;
-  font-size: 100px;
+  font-size: 200px;
   font-weight: bold;
-  margin-block-end: 55px
+  margin-block-end: 55px;
 }
 .secondary {
   text-align: center;
   font-family: "Josefin Sans", sans-serif;
-  font-size: 40px;
+  font-size: 100px;
   font-weight: 8px;
   margin-block-start: 15px;
 }
 .main_img {
-    height: 600px;
-    width: 1000px;
-    padding: 24px;
+  height: 512px;
+  width: 512px;
+  padding: 24px;
+  margin-top: 15%;
 }
 .profile_img {
-    float: top;
-    margin: 2%;
-    border-radius: 50%;
-    width: 219px;
+  float: top;
+  margin: 2%;
+  border-radius: 50%;
+  width: 219px;
 }
-.profile_desc{
-    border: 8px solid #30475e;
-    padding: 20px;
-    margin: 10% 10%;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    display: block;
-    position:relative;
-    text-align: center;
-    font-family: "Josefin Sans", sans-serif;
-    font-size: 32px;
-
-
-    
+.profile_desc {
+  border: 8px solid #30475e;
+  padding: 20px;
+  margin: 10% 10%;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  display: block;
+  position: relative;
+  text-align: center;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 32px;
 }
-.profile_desc:hover{
-    box-shadow:  0 8px 0 16px rgba(0,0,0,0.2);
+.profile_desc:hover {
+  box-shadow: 0 8px 0 16px rgba(0, 0, 0, 0.2);
 }
 
-.upper_container{
+.upper_container {
   padding: 2%;
+}
+.navbar {
+  align-items: right;
+}
+li {
+  font-family: "Josefin Sans", sans-serif;
+  color: #98ded9;
+  font-size: 28px;
+  font-weight: bold;
+  padding: 5px;
 
+  width: fit-content;
 }
-.navbar{
-  align-items:right;
+ul {
+  width: max-content;
 }
-li{
-   font-family:"Josefin Sans", sans-serif; 
-   color:#98ded9;
-   font-size:32px;
-   font-weight:bold;
-}
-.skill_head{
-  font-size:60px;
+.skill_head {
+  font-size: 60px;
   padding: 3%;
-  font-family:"Josefin Sans",sans-serif ;
-  font-weight:bold;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: bold;
   text-align: center;
 }
-.row{
+.row {
   margin: 3% 1%;
   text-align: center;
   display: block;
 }
-.container{
+.container {
   padding: 3% 1%;
-  display:flexbox;
+  display: flexbox;
 }
-.col{
+.col {
   padding: 3%;
   display: -ms-inline-flexbox;
   margin: 10px;
 }
-.card-sm{
-  padding:10px;
-  margin:20px;
+.card-sm {
+  padding: 10px;
+  margin: 20px;
   position: relative;
   left: 18%;
 }
