--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 body {
-  background: rgb(255, 255, 255);
+ 
   background: -moz-linear-gradient(
     0deg,
     rgba(255, 255, 255, 1) 0%,
@@ -10,11 +10,7 @@ body {
     rgba(255, 255, 255, 1) 0%,
     rgba(240, 84, 84, 1) 100%
   );
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(240, 84, 84, 1) 100%
-  );
+
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#f05454",GradientType=1);
 }
 h1 {
@@ -26,14 +22,11 @@ p {
 .navbar {
   height: 55px;
 }
-.upper {
-  color: #30475e;
-  display: inline-flex;
-}
 .upper-text {
-  padding: 10%;
+  padding: 5%;
   position: relative;
-  margin-top: 10%;
+  margin-top: 8%;
+  display:inline-block;
 }
 .main {
   text-align: center;
@@ -42,6 +35,7 @@ p {
   font-size: 160px;
   font-weight: bold;
   margin-block-end: 55px;
+  color: #30475e;
 }
 .secondary {
   text-align: center;
@@ -49,12 +43,16 @@ p {
   font-size: 80px;
   font-weight: 8px;
   margin-block-start: 15px;
+  color: #30475e;
 }
 .main_img {
-  height: 512px;
-  width: 512px;
-  padding: 24px;
-  margin-top: 15%;
+  padding:6%;
+  display:inline-block;
+  margin-left:5%;
+}
+#codeimg{
+  width: 100%;
+  height: auto;
 }
 .profile_img {
   float: top;
@@ -123,8 +121,6 @@ ul {
 .card-sm {
   padding: 10px;
   margin: 20px;
-  position: relative;
-  left: 18%;
 }
 .nav-item{
   margin-top: 10%;
@@ -134,3 +130,60 @@ ul {
 width: max-content;
 font: size 32px;
 }
+.ca{
+  width: 80%;
+  margin: auto;
+}
+.foot{
+  background:rgba(240, 84, 84, 1);
+  text-align: center;
+  color:white;
+}
+.socials{
+  text-align: center;
+}
+#socials_img{
+  width:100px;
+  height: auto;
+  margin: 5%;
+  filter:grayscale(100%);
+}
+#socials_img:hover {
+  filter:none;
+}
+@media only screen and (max-width: 576px) { 
+
+  .main_img{
+    display: block;
+    padding: 5%;
+    width: 100%;
+  }
+  .upper-text{
+    display: block;
+    margin-top: 250px;
+    width: 100%;
+  }
+  .main{
+    display: block;
+    font-size: 70px;
+  }
+  .secondary{
+    display: block;
+    font-size:35px;
+  }
+  .profile_desc{
+    width:300px;
+    margin:auto;
+    font-size: 20px;
+
+  }
+  #codeimg{
+    width:80%;
+    height:auto;
+    margin:10%;
+
+  }
+  .card-sm{
+    position:static;
+  }
+ }
